--- a/nginx/templates/default/nginx.conf.erb
+++ b/nginx/templates/default/nginx.conf.erb
@@ -43,6 +43,10 @@ http {
 
   include <%= node[:nginx][:dir] %>/conf.d/*.conf;
   include <%= node[:nginx][:dir] %>/sites-enabled/*;
-}
 
-error_page 405 = $uri;
+　server {
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    error_page 405 = $uri;
+  }
+
+}
