--- a/nginx/templates/default/site.erb
+++ b/nginx/templates/default/site.erb
@@ -31,7 +31,7 @@ server {
   listen   443 default_server ssl;
   server_name  <%= @application[:domains].join(" ") %> <%= node[:hostname] %>;
   access_log  <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>-ssl.access.log;
-  
+
   ssl on;
   ssl_certificate <%= node[:nginx][:dir] %>/ssl/<%= @application[:domains].first %>.crt;
   ssl_certificate_key <%= node[:nginx][:dir] %>/ssl/<%= @application[:domains].first %>.key;
@@ -50,10 +50,38 @@ server {
   if ($request_uri ~* ^.*\.svn.*$) {
      return 404;
   }
-  
+
   # Block all git access
   if ($request_uri ~* ^.*\.git.*$) {
      return 404;
   }
 
+}
+
+server {
+  listen   80;
+  server_name  <%= @application[:domains].join(" ") %> <%= node[:hostname] %>;
+  access_log  <%= node[:nginx][:log_dir] %>/<%= @application[:domains].first %>.access.log;
+
+  location /privacy_policy.html {
+    root   <%= @application[:absolute_document_root] %>;
+    index  index.html index.htm index.php;
+  }
+
+  # Block all svn access
+  if ($request_uri ~* ^.*\.svn.*$) {
+     return 404;
+  }
+
+  # Block all git access
+  if ($request_uri ~* ^.*\.git.*$) {
+     return 404;
+  }
+
+  location /nginx_status {
+    stub_status on;
+    access_log off;
+    allow 127.0.0.1;
+    deny all;
+  }
 }
